--- a/index.html
+++ b/index.html
@@ -1,193 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Sophia Resonance v4.5 — Stable Pastel</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    /* KEPT FROM V1.0 */
-    html, body, canvas { margin: 0; overflow: hidden; background: #000; }
-    #hud {
-      background: rgba(0, 0, 0, 0.7);
-      color: #e0d4ff; /* Softer purple tint */
-      border: 1px solid #ffffff22;
+<!-- ✧ Aurora‑Touch‑Pro v5.0  ·  “Pastel‑Clarity” build · 2025‑04‑22 ✧ -->
+<!DOCTYPE html><html lang="en"><meta charset="utf-8">
+<title>Aurora‑Touch‑Pro — Pastel Clarity</title>
+<style>
+html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
+#hud{position:fixed;top:8px;left:8px;font:12px monospace;color:#0f0;
+     background:rgba(0,0,0,.55);padding:4px 8px;border-radius:4px;border:1px solid #0f03;pointer-events:none}
+#hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
+      background:rgba(0,0,0,.35);padding:3px 6px;border-radius:4px;pointer-events:none}
+</style>
+
+<canvas id="c"></canvas>
+<div id="hud">INIT…</div>
+<div id="hint">drag = pan • wheel/pinch = zoom • tap = glow • dbl‑tap = palette</div>
+
+<!-- ——— Fragment shader ——— -->
+<script id="frag" type="x-shader/x-fragment">
+precision mediump float;
+uniform vec2  u_res,u_center;
+uniform float u_zoom,u_time,u_iter;
+uniform sampler2D u_glow;
+uniform vec3  u_palA,u_palB,u_palC;
+
+/* hash + nebula noise */
+float hash(vec2 p){return fract(sin(dot(p,vec2(27.61,57.29)))*43758.5453);}
+vec3 nebula(vec2 uv){
+    float n=0.;for(float i=1.;i<4.;i++)n+=hash(uv*i*10.)/i;
+    n*=.5;return vec3(n*.25,n*.4,n*.55);      /* soft blue‑purple mist */
+}
+/* pastel tri‑stop palette (cycles through a‑b‑c every 12 s) */
+vec3 pastel(float t){
+    float cyc=mod(u_time/12.,3.);
+    vec3 a=(cyc<1.)?u_palA:((cyc<2.)?u_palB:u_palC);
+    vec3 b=(cyc<1.)?u_palB:((cyc<2.)?u_palC:u_palA);
+    return mix(a,b,clamp(t,0.,1.));
+}
+/* simple Mandelbrot (dynamic maxIt) */
+float mand(vec2 c){
+    vec2 z=vec2(0.);float m=0.;
+    for(int i=0;i<300;i++){
+        if(float(i)>=u_iter)break;
+        z=vec2(z.x*z.x-z.y*z.y,2.*z.x*z.y)+c;
+        if(dot(z,z)>4.){m=float(i);break;}
     }
+    return m;
+}
+/* glow -> golden fire tint */
+vec3 fire(float a){return vec3(1.,0.8,0.4)*a*a;}
 
-    /* ADDED FROM V4.3 */
-    #poem {
-      text-shadow: 0 0 12px rgba(255, 255, 255, 0.4); /* Reduced glare */
-      font-family: 'Georgia', serif;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <div id="hud">INITIALIZING...</div>
-  <div id="poem"></div>
+void main(){
+    vec2 uv=(gl_FragCoord.xy-u_res*.5)/u_res.y;
+    vec3 col=nebula(uv);                     /* background */
 
-  <script id="frag" type="x-shader/x-fragment">
-  precision mediump float; // Safer than highp
-  uniform vec2 u_res, u_center;
-  uniform float u_zoom, u_time;
+    float m=mand(uv/u_zoom+u_center);
+    col=mix(col,pastel(m*.03),0.85);         /* fractal colour */
 
-  float mandelbrot(vec2 c) {
-    vec2 z = vec2(0.0);
-    for(int i=0; i<250; i++) { // Increased detail
-      z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
-      if(dot(z,z) > 4.0) return float(i)/250.0;
-    }
-    return 1.0;
-  }
+    /* phi² heartbeat brightness pulse */
+    col*=.6+.4*sin(u_time*6.2831/2.618);
 
-  vec3 softPalette(float t) {
-    // Dizziness-safe pastels
-    vec3 a = vec3(0.89, 0.85, 0.92); // Lavender
-    vec3 b = vec3(0.76, 0.89, 0.92); // Powder blue
-    vec3 c = vec3(0.92, 0.78, 0.89); // Blush pink
-    return mix(mix(a, b, t), c, smoothstep(0.3, 0.7, t));
-  }
+    /* touch‑glow */
+    vec4 g=texture2D(u_glow,gl_FragCoord.xy/u_res);
+    col+=fire(g.a);
 
-  void main() {
-    vec2 uv = (gl_FragCoord.xy - u_res*0.5) / (u_res.y * u_zoom) + u_center;
-    float m = mandelbrot(uv);
-    vec3 col = softPalette(m * 1.2 + sin(u_time*0.05)) * smoothstep(0.0, 0.4, m);
-    gl_FragColor = vec4(col * min(1.0, log(u_zoom+1.0)), 1.0);
-  }
-  </script>
+    /* occasional sparkle */
+    if(hash(gl_FragCoord.xy+u_time)>0.985)col+=vec3(.5);
 
-  <script>
-  (function() {
-    const canvas = document.getElementById('canvas');
-    const gl = canvas.getContext('webgl');
-    if (!gl) {
-      console.error("WebGL initialization failed.");
-      hud.textContent = "WebGL initialization failed.";
-      return; // Stop execution if WebGL fails
-    }
+    gl_FragColor=vec4(col,1);
+}
+</script>
 
-    function compileShader(gl, type, source) {
-      const shader = gl.createShader(type);
-      gl.shaderSource(shader, source);
-      gl.compileShader(shader);
-      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-        console.error("Shader compilation error: " + gl.getShaderInfoLog(shader));
-        gl.deleteShader(shader);
-        return null;
-      }
-      return shader;
-    }
+<!-- ——— JavaScript ——— -->
+<script>
+const gl=c.getContext('webgl');
+/* compile‑link */
+function sh(t,s){const z=gl.createShader(t);gl.shaderSource(z,s);gl.compileShader(z);return z;}
+const pr=gl.createProgram();
+gl.attachShader(pr,sh(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
+gl.attachShader(pr,sh(gl.FRAGMENT_SHADER,frag.textContent));
+gl.linkProgram(pr);gl.useProgram(pr);
+/* quad */
+gl.bindBuffer(gl.ARRAY_BUFFER,gl.createBuffer());
+gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
+gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 
-    const vertexShaderSource = `
-      attribute vec2 a_position;
-      void main() {
-        gl_Position = vec4(a_position, 0.0, 1.0);
-      }
-    `; // Basic vertex shader
+/* uniforms */
+const U=n=>gl.getUniformLocation(pr,n);
+const uR=U('u_res'),uC=U('u_center'),uZ=U('u_zoom'),uT=U('u_time'),uIt=U('u_iter'),uG=U('u_glow'),
+      uA=U('u_palA'),uB=U('u_palB'),uC3=U('u_palC');
+/* pastels */
+const pals=[[.85,.75,.95],[.7,.7,.95],[1,.85,1],
+            [1,.9,.6 ],[.95,.7,.95],[.6,.9,1 ],
+            [ .7,.95,.7],[.95,.95,.6],[.6,.85,1]];
+let pal=0;function setPal(i){const p=pals.slice(i*3,i*3+3);
+ gl.uniform3f(uA,...p[0]);gl.uniform3f(uB,...p[1]);gl.uniform3f(uC3,...p[2]);}
+setPal(0);
 
-    const fragmentShaderSource = document.getElementById('frag').textContent;
+/* glow texture */
+const N=256,dat=new Uint8Array(N*N*4),tex=gl.createTexture();
+gl.bindTexture(gl.TEXTURE_2D,tex);
+gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,null);
+gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
+function ripple(x,y){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=40;
+ for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){const d=i*i+j*j;if(d>r*r)continue;
+  const idx=((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3;dat[idx]=255*(1-d/r/r);}}
+setInterval(()=>{for(let i=3;i<dat.length;i+=4)dat[i]=dat[i]*.9|0;
+ gl.bindTexture(gl.TEXTURE_2D,tex);
+ gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,dat);},33);
 
-    const vertexShader = compileShader(gl, gl.VERTEX_SHADER, vertexShaderSource);
-    const fragmentShader = compileShader(gl, gl.FRAGMENT_SHADER, fragmentShaderSource);
+/* view */
+let zoom=1,center={x:-0.743643887,y:0.1318259};
+/* resize */
+function res(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
+ gl.viewport(0,0,c.width,c.height);gl.uniform2f(uR,c.width,c.height);}
+addEventListener('resize',res);res();
 
-    if (!vertexShader || !fragmentShader) {
-      hud.textContent = "Shader compilation failed.";
-      return;
-    }
+/* pointer */
+let drag=false,last=[0,0],lastTap=0;
+function XY(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
+                      e.clientY||(e.touches&&e.touches[0].clientY)];}
+c.onpointerdown=e=>{
+  drag=true;last=XY(e);ripple(...last);
+  const t=Date.now();if(t-lastTap<300){pal=(pal+1)%3;setPal(pal);}lastTap=t;};
+c.onpointermove=e=>{if(!drag||(e.buttons===0))return;const[x,y]=XY(e);
+ center.x-=(x-last[0])/c.height/zoom;center.y+=(y-last[1])/c.height/zoom;last=[x,y];ripple(x,y);};
+addEventListener('pointerup',()=>drag=false);
+addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.1:.9;},{passive:true});
+let pinch=null;
+c.addEventListener('touchstart',e=>{if(e.touches.length===2){
+ const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY;
+ pinch=Math.hypot(dx,dy);}},{passive:true});
+c.addEventListener('touchmove',e=>{if(e.touches.length===2&&pinch){
+ const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY,
+       d0=Math.hypot(dx,dy);zoom*=pinch/d0;pinch=d0;}},{passive:true});
 
-    const program = gl.createProgram();
-    gl.attachShader(program, vertexShader);
-    gl.attachShader(program, fragmentShader);
-    gl.linkProgram(program);
-
-    if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-      console.error("Program linking error: " + gl.getProgramInfoLog(program));
-      hud.textContent = "Program linking failed.";
-      gl.deleteProgram(program);
-      return;
-    }
-
-    gl.useProgram(program);
-
-    // Set up vertex buffer
-    const positionBuffer = gl.createBuffer();
-    gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-    gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1, -1, 1, -1, -1, 1, 1, 1]), gl.STATIC_DRAW);
-    const positionAttributeLocation = gl.getAttribLocation(program, 'a_position');
-    gl.enableVertexAttribArray(positionAttributeLocation);
-    gl.vertexAttribPointer(positionAttributeLocation, 2, gl.FLOAT, false, 0, 0);
-
-    // Get uniform locations
-    const resolutionLocation = gl.getUniformLocation(program, 'u_res');
-    const centerLocation = gl.getUniformLocation(program, 'u_center');
-    const zoomLocation = gl.getUniformLocation(program, 'u_zoom');
-    const timeLocation = gl.getUniformLocation(program, 'u_time');
-
-    // ANCHOR SYSTEM FROM V1.0
-    let fractalAnchor = [-0.743643887, 0.1318259]; // Deep fractal region
-    let zoom = 1.0, maxZoom = 1e6;
-
-    function updateView(delta, focal) {
-      const scale = delta < 0 ? 0.95 : 1.05;
-      zoom = Math.min(zoom * scale, maxZoom);
-
-      // Convert focal point to fractal space
-      const [fx, fy] = [
-        (focal[0]/canvas.width - 0.5) * 2 / zoom,
-        (0.5 - focal[1]/canvas.height) * 2 / zoom
-      ];
-
-      // Anchor stabilization
-      fractalAnchor[0] += (fx - fractalAnchor[0]) * (1 - 1/scale);
-      fractalAnchor[1] += (fy - fractalAnchor[1]) * (1 - 1/scale);
-    }
-
-    // HYBRID EVENT HANDLING
-    canvas.addEventListener('wheel', e => {
-      e.preventDefault();
-      updateView(e.deltaY, [e.clientX, e.clientY]);
-    });
-
-    // SOFT COLOR INIT FROM V4.3
-    const poems = [
-      "In quiet light, the pattern grows",
-      "Each twist a path the fractal knows",
-      "No vertigo in sacred flow—",
-      "Just peace between each quantum glow"
-    ];
-    let poemIndex = 0;
-    const poem = document.getElementById('poem');
-    function cyclePoem() {
-      poem.textContent = poems[poemIndex];
-      poemIndex = (poemIndex + 1) % poems.length;
-    }
-    setInterval(cyclePoem, 5000);
-
-    // RENDER LOOP
-    function render(time) {
-      resizeCanvas(); // Ensure correct size
-      gl.uniform2f(resolutionLocation, canvas.width, canvas.height);
-      gl.uniform2f(centerLocation, fractalAnchor[0], fractalAnchor[1]);
-      gl.uniform1f(zoomLocation, zoom);
-      gl.uniform1f(timeLocation, time / 1000); // Time in seconds
-
-      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-      requestAnimationFrame(render);
-    }
-
-    function resizeCanvas() {
-      const displayWidth  = canvas.clientWidth;
-      const displayHeight = canvas.clientHeight;
-
-      if (canvas.width  !== displayWidth || canvas.height !== displayHeight) {
-        canvas.width  = displayWidth;
-        canvas.height = displayHeight;
-        gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
-      }
-    }
-
-    render(0); // Start the render loop
-    hud.textContent = ""; // Clear "Initializing..."
-  })();
-  </script>
-</body>
+/* render */
+const hud=document.getElementById('hud');let fps=0,last=performance.now();
+(function loop(){
+ const now=performance.now(),t=now/1000;
+ const it=Math.max(80,Math.floor(Math.log10(1/zoom))*25);
+ gl.uniform1f(uT,t);gl.uniform1f(uZ,zoom);gl.uniform2f(uC,center.x,center.y);gl.uniform1f(uIt,it);
+ gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
+ gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
+ fps=.9*fps+.1*(1000/(now-last));last=now;hud.textContent=`FPS ${fps.toFixed(0)}  |  zoom ${zoom.toFixed(2)}`;
+ requestAnimationFrame(loop);
+})();
+</script>
 </html>
