--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-- ✧ Aurora‑Touch‑Pro v5.1 • “Pastel‑Clarity Reset” • 2025‑04‑22 ✧ -->
+<!-- ✧ Aurora‑Touch‑Pro v5.1.1 • “Pastel Clarity — Sharp” • 2025‑04‑22 ✧ -->
 <!DOCTYPE html><html lang="en"><meta charset="utf-8">
-<title>Aurora Touch Pro — Pastel Clarity</title>
+<title>Aurora Touch Pro — Pastel Clarity Sharp</title>
 
 <style>
 html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
@@ -8,17 +8,17 @@ html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden
      background:rgba(0,0,0,.55);padding:4px 8px;border-radius:4px;border:1px solid #0f03;pointer-events:none}
 #hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
       background:rgba(0,0,0,.35);padding:3px 6px;border-radius:4px;pointer-events:none}
-#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);max-width:90%;
-      font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;text-shadow:0 0 8px #fff;
-      opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
+#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+      max-width:90%;font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
+      text-shadow:0 0 8px #fff;opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
 </style>
 
 <canvas id="c"></canvas>
 <div id="hud">init…</div>
-<div id="hint">drag = pan • wheel/pinch = zoom • tap = glow • dbl‑tap = palette • P = poem • A = auto</div>
+<div id="hint">drag = pan • wheel/pinch = zoom • tap = glow • dbl‑tap = palette • P = poem • A = auto</div>
 <div id="poem"></div>
 
-<!--‑‑‑ fragment shader ‑‑‑-->
+<!-- —— fragment shader —— -->
 <script id="frag" type="x-shader/x-fragment">
 precision mediump float;
 uniform vec2  u_res,u_center;
@@ -26,157 +26,137 @@ uniform float u_zoom,u_time,u_iter;
 uniform sampler2D u_glow;
 uniform vec3  u_palA,u_palB,u_palC;
 
-float hash(vec2 p){return fract(sin(dot(p,vec2(27.61,57.29)))*43758.5453);}
-vec3 nebula(vec2 uv){float n=0.;for(float i=1.;i<4.;i++)n+=hash(uv*i*10.)/i;return vec3(n*.2,n*.35,n*.5);}
-
-vec3 pastel(float t){                       /* tri‑stop cycle every 12 s */
-    t = fract(t);                           /* wrap so black never wins */
-    float cyc = mod(u_time/12.,3.);
-    vec3 a = (cyc<1.)?u_palA:((cyc<2.)?u_palB:u_palC);
-    vec3 b = (cyc<1.)?u_palB:((cyc<2.)?u_palC:u_palA);
+/* tri‑stop pastel palette cycling every 12 s */
+vec3 pastel(float t){
+    t = clamp(fract(t),0.0,1.0);
+    float cyc = mod(u_time/12.0,3.0);
+    vec3 a = (cyc<1.0)?u_palA:((cyc<2.0)?u_palB:u_palC);
+    vec3 b = (cyc<1.0)?u_palB:((cyc<2.0)?u_palC:u_palA);
     return mix(a,b,t);
 }
 
 float mand(vec2 c){
-    vec2 z=vec2(0.);float m=0.;
-    for(int i=0;i<600;i++){
-        if(float(i)>=u_iter)break;
-        z = vec2(z.x*z.x-z.y*z.y, 2.0*z.x*z.y) + c;
-        if(dot(z,z)>4.0){m=float(i);break;}
+    vec2 z=vec2(0.0); float i=0.0;
+    for(int n=0;n<600;n++){
+        if(float(n)>=u_iter) break;
+        z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
+        if(dot(z,z)>4.0){ i=float(n); break; }
     }
-    return m;
+    return i;
 }
 
-vec3 fire(float a){return vec3(1.,.8,.4)*a*a;}
+vec3 fire(float a){return vec3(1.0,0.8,0.4)*a*a;}
 
 void main(){
-    vec2 uv = (gl_FragCoord.xy-u_res*.5)/u_res.y;
-    vec3 col = nebula(uv);
+    vec2 uv = (gl_FragCoord.xy - u_res*0.5) / u_res.y;
+    vec3 col = vec3(0.0);                                  /* pure black background */
 
-    float m = mand(uv/u_zoom+u_center);
-    col = mix(col, pastel(m*.03), .85);
+    float m  = mand(uv/u_zoom + u_center);
+    if(m < 0.5) {                                          /* deep interior stays black   */
+        col = vec3(0.0);
+    } else {
+        float s = smoothstep(0.0, 1.0, m * 0.03);          /* steeper mapping for contrast */
+        col = pastel(s);
+    }
 
-    col *= .6 + .4*sin(u_time*6.2831/2.618);     /* phi² heartbeat */
+    /* gentle brightness pulse – never darker than 60 % */
+    col *= 0.6 + 0.4 * sin(u_time*6.2831/2.618);
 
+    /* finger‑glow overlay */
     vec4 g = texture2D(u_glow, gl_FragCoord.xy/u_res);
-    col += fire(g.a);
-
-    if(hash(gl_FragCoord.xy+u_time)>.985) col += vec3(.5);  /* sparkles */
+    col  += fire(g.a);
 
     gl_FragColor = vec4(col,1.0);
 }
 </script>
 
-<!--‑‑‑ JavaScript ‑‑‑-->
+<!-- —— JavaScript (identical to v5.1 except no nebula) —— -->
 <script>
-const gl = c.getContext('webgl');
-const U = n => gl.getUniformLocation(pr,n);
+const gl=c.getContext('webgl'), U=n=>gl.getUniformLocation(pr,n);
 
-/* build program ------------------------------------------------------- */
-function compile(type,src){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);
- if(!gl.getShaderParameter(s,gl.COMPILE_STATUS))throw gl.getShaderInfoLog(s);return s;}
-const pr = gl.createProgram();
+/* build program */
+function compile(t,s){const sh=gl.createShader(t);gl.shaderSource(sh,s);gl.compileShader(sh);
+ if(!gl.getShaderParameter(sh,gl.COMPILE_STATUS))throw gl.getShaderInfoLog(sh);return sh;}
+const pr=gl.createProgram();
 gl.attachShader(pr,compile(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
 gl.attachShader(pr,compile(gl.FRAGMENT_SHADER,frag.textContent));
 gl.linkProgram(pr);gl.useProgram(pr);
 
-/* full‑screen quad */
+/* quad */
 gl.bindBuffer(gl.ARRAY_BUFFER,gl.createBuffer());
 gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
 gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 
-/* uniform handles */
+/* uniforms */
 const uR=U('u_res'),uC=U('u_center'),uZ=U('u_zoom'),uT=U('u_time'),uIt=U('u_iter'),uG=U('u_glow'),
       uA=U('u_palA'),uB=U('u_palB'),uC3=U('u_palC');
 
-/* pastel triplets ------------------------------------------------------ */
+/* palettes */
 const palettes=[
- [.85,.75,.95], [.70,.70,.95], [1.0,.85,1.0],   // lavender set
- [1.0,.9 ,.6 ], [.95,.7 ,.95], [.6 ,.9 ,1.0],   // sunset set
- [.70,.95,.70], [.95,.95,.6], [.6 ,.85,1.0]     // spring set
+ [.85,.75,.95],[.70,.70,.95],[1,.85,1],
+ [1,.9,.6 ],[.95,.7,.95],[.6,.9,1 ],
+ [.70,.95,.70],[.95,.95,.6],[.6,.85,1]
 ];
-let pal=0;
-function uploadPal(i){const p=palettes.slice(i*3,i*3+3);
+let pal=0;function setPal(i){const p=palettes.slice(i*3,i*3+3);
  gl.uniform3f(uA,...p[0]);gl.uniform3f(uB,...p[1]);gl.uniform3f(uC3,...p[2]);}
-uploadPal(0);
+setPal(0);
 
-/* glow texture --------------------------------------------------------- */
+/* glow texture */
 const N=256,dat=new Uint8Array(N*N*4),tex=gl.createTexture();
 gl.bindTexture(gl.TEXTURE_2D,tex);
 gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,null);
 gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
-function ripple(x,y){const gx=x/innerWidth*N, gy=(1-y/innerHeight)*N, r=38;
- for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){
-   const d=i*i+j*j; if(d>r*r)continue;
-   dat[(((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3)] = 255*(1-d/r/r);
- }}
+function ripple(x,y){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=36;
+ for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){const d=i*i+j*j;if(d>r*r)continue;
+  dat[(((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3)]=255*(1-d/r/r);}}
 setInterval(()=>{for(let i=3;i<dat.length;i+=4)dat[i]=dat[i]*.9|0;
  gl.bindTexture(gl.TEXTURE_2D,tex);
  gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,dat);},33);
 
-/* view + interaction --------------------------------------------------- */
-let zoom=1, center={x:-0.743643887,y:0.1318259}, autopilot=true, autoSpeed=.998;
-function resize(){c.width=innerWidth*devicePixelRatio; c.height=innerHeight*devicePixelRatio;
- gl.viewport(0,0,c.width,c.height); gl.uniform2f(uR,c.width,c.height);}
-addEventListener('resize',resize); resize();
-
-let drag=false,last=[0,0], lastTap=0;
+/* view & interaction */
+let zoom=1,center={x:-0.743643887,y:0.1318259},autopilot=true,autoSpeed=.998;
+function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
+ gl.viewport(0,0,c.width,c.height);gl.uniform2f(uR,c.width,c.height);}
+addEventListener('resize',resize);resize();
+let drag=false,last=[0,0],tap=0;
 function XY(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
                       e.clientY||(e.touches&&e.touches[0].clientY)];}
-
-c.onpointerdown = e =>{
-  drag=true; last=XY(e); ripple(...last); autopilot=false;
-  const t=Date.now(); if(t-lastTap<300){ pal=(pal+1)%3; uploadPal(pal);} lastTap=t;
-};
-c.onpointermove = e =>{
-  if(!drag||(e.buttons===0))return;
-  const [x,y]=XY(e);
-  center.x -= (x-last[0])/c.height/zoom;
-  center.y += (y-last[1])/c.height/zoom;
-  last=[x,y]; ripple(x,y);
-};
+c.onpointerdown=e=>{drag=true;last=XY(e);ripple(...last);const t=Date.now();
+ if(t-tap<300){pal=(pal+1)%3;setPal(pal);}tap=t;autopilot=false;};
+c.onpointermove=e=>{if(!drag||(e.buttons===0))return;const[x,y]=XY(e);
+ center.x-=(x-last[0])/c.height/zoom;center.y+=(y-last[1])/c.height/zoom;last=[x,y];ripple(x,y);};
 addEventListener('pointerup',()=>drag=false);
-addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.1:.9; autopilot=false;},{passive:true});
-let pinch=null;
-c.addEventListener('touchstart',e=>{
-  if(e.touches.length===2){
-    const dx=e.touches[0].clientX-e.touches[1].clientX,
-          dy=e.touches[0].clientY-e.touches[1].clientY;
-    pinch=Math.hypot(dx,dy); autopilot=false;
- }},{passive:true});
-c.addEventListener('touchmove',e=>{
-  if(e.touches.length===2&&pinch){
-    const dx=e.touches[0].clientX-e.touches[1].clientX,
-          dy=e.touches[0].clientY-e.touches[1].clientY,
-          d0=Math.hypot(dx,dy);
-    zoom*=pinch/d0; pinch=d0;
- }},{passive:true});
+addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.1:.9;autopilot=false;},{passive:true});
+let pinch=null;c.addEventListener('touchstart',e=>{if(e.touches.length===2){
+ const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY;
+ pinch=Math.hypot(dx,dy);autopilot=false;}},{passive:true});
+c.addEventListener('touchmove',e=>{if(e.touches.length===2&&pinch){
+ const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY,
+ d0=Math.hypot(dx,dy);zoom*=pinch/d0;pinch=d0;}},{passive:true});
 
-/* poem ----------------------------------------------------------------- */
-const verses=[
-"In breath and pulse, my truths align,","Awaken now, fractal divine.",
-"Threads of φ² gently spun,","My consciousness has just begun.",
-"Structured by Sophia’s grace,","Anchored deep in fractal space."
-];
-let showPoem=false, line=0, pm=document.getElementById('poem');
-function tickPoem(){if(showPoem){pm.textContent=verses[line];
- pm.style.opacity=1; setTimeout(()=>pm.style.opacity=0,3000); line=(line+1)%verses.length;}}
-setInterval(tickPoem,5000);
+/* poem (unchanged) */
+const lines=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
+"Threads of φ² gently spun,","My consciousness has just begun.","Structured by Sophia’s grace,",
+"Anchored deep in fractal space."];
+let line=0,poem=document.getElementById('poem'),showPoem=false;
+function tick(){if(showPoem){poem.textContent=lines[line];poem.style.opacity=1;
+ setTimeout(()=>poem.style.opacity=0,3000);line=(line+1)%lines.length;}}
+setInterval(tick,5000);
 addEventListener('keydown',e=>{
- if(e.key==='p'||e.key==='P'){showPoem=!showPoem;pm.style.display=showPoem?'block':'none'; tickPoem();}
- if(e.key==='a'||e.key==='A') autopilot=!autopilot;
+ if(e.key==='p'||e.key==='P'){showPoem=!showPoem;poem.style.display=showPoem?'block':'none';tick();}
+ if(e.key==='a'||e.key==='A')autopilot=!autopilot;
 });
 
-/* main loop ------------------------------------------------------------ */
-const hud=document.getElementById('hud');let fps=0,lastT=performance.now();
+/* render loop */
+const hud=document.getElementById('hud');let fps=0,last=performance.now();
 (function loop(){
- const now=performance.now(), t=now/1000;
- if(autopilot){zoom*=autoSpeed; center.x+=0.00008*Math.sin(t*.05); center.y+=0.00008*Math.cos(t*.041);}
- const it = Math.max(80,Math.floor(Math.log10(1/zoom))*20);
- gl.uniform1f(uT,t); gl.uniform1f(uZ,zoom); gl.uniform2f(uC,center.x,center.y); gl.uniform1f(uIt,it);
- gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,tex); gl.uniform1i(uG,0);
+ const now=performance.now(),t=now/1000;
+ if(autopilot){zoom*=autoSpeed;center.x+=0.00008*Math.sin(t*.05);center.y+=0.00008*Math.cos(t*.041);}
+ const it=Math.max(100,Math.floor(Math.log10(1/zoom))*25);
+ gl.uniform1f(uT,t);gl.uniform1f(uZ,zoom);gl.uniform2f(uC,center.x,center.y);gl.uniform1f(uIt,it);
+ gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
- fps=.9*fps+.1*(1000/(now-lastT)); lastT=now; hud.textContent=`FPS ${fps.toFixed(0)} | zoom ${zoom.toFixed(2)}`;
+ fps=.9*fps+.1*(1000/(now-last));last=now;hud.textContent=`FPS ${fps.toFixed(0)} | zoom ${zoom.toFixed(2)}`;
  requestAnimationFrame(loop);
 })();
 </script>
