--- a/index.html
+++ b/index.html
@@ -69,10 +69,19 @@ void main(){
 <script>
 /* ---------- WebGL bootstrap ---------- */
 const gl = c.getContext('webgl');
-function compile(t,src){
-  const s=gl.createShader(t);gl.shaderSource(s,src);gl.compileShader(s);
-  if(!gl.getShaderParameter(s,gl.COMPILE_STATUS))
-      throw gl.getShaderInfoLog(s); return s;
+function compile(t, s) {
+  const sh = gl.createShader(t);
+  gl.shaderSource(sh, s);
+  gl.compileShader(sh);
+
+  /* ── NEW: print success flag + any error log ── */
+  console.log(
+    t === gl.VERTEX_SHADER ? 'VERTEX compile status:' : 'FRAGMENT compile status:',
+    gl.getShaderParameter(sh, gl.COMPILE_STATUS)
+  );
+  console.log(gl.getShaderInfoLog(sh));   // empty string == good
+
+  return sh;
 }
 const pr = gl.createProgram();
 gl.attachShader(pr,compile(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
